--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,7 +10,7 @@ title = "Chenyun Wu"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "/"
+baseurl = "https://people.cs.umass.edu/~chenyun/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
